--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -48,9 +48,6 @@ jobs:
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-      - name: Change directory
-        run: |
-          cd ./docs
       - name: Build with Hugo
         env:
           # For maximum backwards compatibility with Hugo modules
@@ -58,6 +55,7 @@ jobs:
           HUGO_ENV: production
         run: |
           hugo \
+            -s ./docs \
             --gc --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/docs"
       - name: Upload artifact
