--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -56,6 +56,7 @@ jobs:
         run: |
           hugo \
             -s ./docs \
+            -d ./public/docs \
             --gc --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/docs"
       - name: Upload artifact
